app/javascript/styles/mastodon/components.scss
/* ... */
.no-reduce-motion .spoiler-input {
  transition: height 0.4s ease, opacity 0.4s ease;
}

.emojione {
  font-size: inherit;
  vertical-align: middle;
  object-fit: contain;
  margin: -.2ex .15em .2ex;
  width: 16px;
  height: 16px;

  img {
    width: auto;
  }
}

.reply-indicator {
  border-radius: 4px;
  margin-bottom: 10px;
  background: $ui-primary-color;
  padding: 10px;
}

.reply-indicator__header {
  margin-bottom: 5px;
  overflow: hidden;
}

.reply-indicator__cancel {
  float: right;
  line-height: 24px;
}

.reply-indicator__display-name {
  color: $inverted-text-color;
  display: block;
  max-width: 100%;
  line-height: 24px;
  overflow: hidden;
  padding-right: 25px;
  text-decoration: none;
}

.reply-indicator__display-avatar {
  float: left;
  margin-right: 5px;
}

.status__content--with-action {
  cursor: pointer;
}

.status__content,
.reply-indicator__content {
  position: relative;
  font-size: 15px;
  line-height: 20px;
  word-wrap: break-word;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: pre-wrap;
  padding-top: 2px;
  color: $primary-text-color;

  &:focus {
    outline: 0;
  }

  &.status__content--with-spoiler {
    white-space: normal;

    .status__content__text {
      white-space: pre-wrap;
    }
  }

  .emojione {
    width: 20px;
    height: 20px;
    margin: -3px 0 0;
  }

  p {
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: $secondary-text-color;
    text-decoration: none;

    &:hover {
      text-decoration: underline;

      .fa {
        color: lighten($dark-text-color, 7%);
      }
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }

    .fa {
      color: $dark-text-color;
    }
  }

  .status__content__spoiler-link {
    background: $action-button-color;

    &:hover {
      background: lighten($action-button-color, 7%);
      text-decoration: none;
    }

    &::-moz-focus-inner {
      border: 0;
    }

    &::-moz-focus-inner,
    &:focus,
    &:active {
      outline: 0 !important;
    }
  }

  .status__content__text {
    display: none;

    &.status__content__text--visible {
      display: block;
    }
  }
}

.status__content.status__content--collapsed {
  max-height: 20px * 15; // 15 lines is roughly above 500 characters
}

.status__content__read-more-button {
  display: block;
  font-size: 15px;
  line-height: 20px;
  color: lighten($ui-highlight-color, 8%);
  border: 0;
  background: transparent;
  padding: 0;
  padding-top: 8px;

  &:hover,
  &:active {
    text-decoration: underline;
  }
}

.status__content__spoiler-link {
  display: inline-block;
  border-radius: 2px;
  background: transparent;
  border: 0;
  color: $inverted-text-color;
  font-weight: 700;
  font-size: 11px;
  padding: 0 6px;
  text-transform: uppercase;
  line-height: 20px;
  cursor: pointer;
  vertical-align: middle;
}

.status__wrapper--filtered {
  color: $dark-text-color;
  border: 0;
  font-size: inherit;
  text-align: center;
  line-height: inherit;
  margin: 0;
  padding: 15px;
  box-sizing: border-box;
  width: 100%;
  clear: both;
  border-bottom: 1px solid lighten($ui-base-color, 8%);
}

.status__prepend-icon-wrapper {
  left: -26px;
  position: absolute;
}

.focusable {
  &:focus {
    outline: 0;
    background: lighten($ui-base-color, 4%);

    .status.status-direct {
      background: lighten($ui-base-color, 12%);

      &.muted {
        background: transparent;
      }
    }

    .detailed-status,
    .detailed-status__action-bar {
      background: lighten($ui-base-color, 8%);
    }
  }
}

.status {
  padding: 8px 10px;
  padding-left: 68px;
  position: relative;
  min-height: 54px;
  border-bottom: 1px solid lighten($ui-base-color, 8%);
  cursor: default;

  @supports (-ms-overflow-style: -ms-autohiding-scrollbar) {
    // Add margin to avoid Edge auto-hiding scrollbar appearing over content.
    // On Edge 16 this is 16px and Edge <=15 it's 12px, so aim for 16px.
    padding-right: 26px; // 10px + 16px
  }

  @keyframes fade {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }

  opacity: 1;
  animation: fade 150ms linear;

  .video-player {
    margin-top: 8px;
  }

  &.status-direct:not(.read) {
    background: lighten($ui-base-color, 8%);
    border-bottom-color: lighten($ui-base-color, 12%);
  }

  &.light {
    .status__relative-time {
      color: $light-text-color;
    }

    .status__display-name {
      color: $inverted-text-color;
    }

    .display-name {
      strong {
        color: $inverted-text-color;
      }

      span {
        color: $light-text-color;
      }
    }

    .status__content {
      color: $inverted-text-color;

      a {
        color: $highlight-text-color;
      }

      a.status__content__spoiler-link {
        color: $primary-text-color;
        background: $ui-primary-color;

        &:hover {
          background: lighten($ui-primary-color, 8%);
        }
      }
    }
  }
}

.notification-favourite {
  .status.status-direct {
    background: transparent;

    .icon-button.disabled {
      color: lighten($action-button-color, 13%);
    }
  }
}

.status__relative-time,
.notification__relative_time {
  color: $dark-text-color;
  float: right;
  font-size: 14px;
}

.status__display-name {
  color: $dark-text-color;
}

.status__info .status__display-name {
  display: block;
  max-width: 100%;
  padding-right: 25px;
}

.status__info {
  font-size: 15px;
}

.status-check-box {
  border-bottom: 1px solid $ui-secondary-color;
  display: flex;

  .status-check-box__status {
    margin: 10px 0 10px 10px;
    flex: 1;

    .media-gallery {
      max-width: 250px;
    }

    .status__content {
      padding: 0;
      white-space: normal;
    }

    .video-player {
      margin-top: 8px;
      max-width: 250px;
    }

    .media-gallery__item-thumbnail {
      cursor: default;
    }
  }
}
/* ... */

